# lmathx

./: CMakeLists.txt  Makefile  dist.info  lmathx.c  test.lua
share/lmathx/: README
